<resources>
    <string name="app_name">Bank</string>
    <string name="icono_bienvenida">Welcome icon</string>
    <string name="text_bienvenido_a">Welcome</string>
    <string name="introduce_psw">Password</string>
    <string name="introduce_usuario">User</string>
    <string name="iniciar_sesion">Log in</string>
    <string name="txt_button_enter">Enter</string>
    <string name="txt_button_exit">Exit</string>
    <string name="obligatorio">Requierd*</string>
    <string name="icono_del_banco">Bank icon</string>
    <string name="imagen_fondo_welcome">Welcome background image</string>
    <string name="bienvenido_a_a_mi_banco">Welcome to my bank</string>
    <string name="posicion_global">Global position</string>
    <string name="movimientos">Movements</string>
    <string name="transferencias">Transfers</string>
    <string name="promociones">Promotions</string>
    <string name="cajeros">Cashiers</string>
    <string name="error_usr">DNI of 8 numbers and one letter</string>
    <string name="cambiar_psw">Change password</string>
    <string name="error_psw_antigua">Password does not match</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="error_psw_repetida">Must be same as the new password</string>
    <string name="error_psw">Must contain at last 3 characters</string>
    <string name="error_general">Must fill out required fields</string>
    <string name="psw_antigua">Old password</string>
    <string name="psw_nueva">New password</string>
    <string name="psw_repetida">Repeat password</string>
    <string name="error_guardar_contrasena">Must fill out fields to change password</string>
    <string name="tituloGlobalPosition">Global Position</string>
    <string name="txt_cuentas">Accounts:</string>
    <string name="error_cliente_existencia">The client does not exist!</string>
    <string name="contrasenya_actualizada">Password updated!</string>
    <string name="contrasenya_no_actualizada">Password can\'t be changed!</string>
    <string name="movements">Movements</string>
    <string name="select_an_account">Select an account:</string>
    <string name="importe_ActMov">Amount:</string>
    <string name="transferencia">Transfers</string>
    <string name="cuenta_propia">Own account</string>
    <string name="cuenta_ajena">External account</string>
    <string name="enviar_justificante">Send justify</string>
    <string name="cantidad">Amount:</string>
    <string name="escribe_el_num_cuenta_ajena">Write an external account number</string>
    <string name="transferenciaOK">Transfer sent!</string>
    <string name="transferenciaNO">Insufficient data!</string>
    <string name="detalle_del_movimiento">Movement details</string>
    <string name="dialogo_descripcion_movimeinto">hola</string>
    <string name="ultimos_movimientos">Lasts movements:</string>
    <string name="configuracion">Configuration</string>
    <string name="email">contact@mibanco.com</string>
    <string name="miBanco_titulo">My bank</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="mainHome">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_menu_todos">All</string>
    <string name="nav_menu_tipo_1">Type 1</string>
    <string name="nav_menu_tipo_2">Type 2</string>
    <string name="nav_menu_tipo_3">Type 3</string>


    <string name="multimedia">Media</string>
    <string name="noEscuchar">Do not listen to music while the application is running</string>
    <string name="siEscuchar">Listen to music while the application is running</string>
    <string name="musica">Music</string>
    <string name="noVideo">Do not play a video when starting the application</string>
    <string name="siVideo">Play a video when starting the application</string>
    <string name="videoTitle">Welcome video</string>
    <string name="idioma">Language</string>
    <string name="idiomaTitle">Application language</string>
    <string name="datos">Data</string>
    <string name="datosTitle">Data origin</string>

    <string name="esp">Spanish</string>
    <string name="eng">English</string>
    <string name="ale">Deutsch</string>

    <string name="bd">Local data base</string>
    <string name="sw">Web server</string>
    <string name="atmTitle">ATM</string>
    <string name="btn_atm_list">ATM List</string>
    <string name="btn_atm_add">ATM Add</string>
    <string name="btn_atm_maps">ATM Maps</string>
    <string name="title_atm_list">ATM List</string>
    <string name="select_atm">Select ATM:</string>
    <string name="management_atm">Management ATM</string>
    <string name="hint_address">Address</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="delete">Delete</string>
    <string name="actualizar">Update</string>
</resources>