<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AtmManagerFragment"
    android:id="@+id/frgAtmManager">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MiEstilo.textos.titulos"
            android:text="@string/management_atm"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_address"
            style="@style/MiEstilo.textos"
            android:layout_marginVertical="20dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_adress"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/MiEstilo.textoEditable"
            android:hint="@string/hint_address"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_adress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MiEstilo.textoEditableEscrito"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_latitude"
            style="@style/MiEstilo.textos"
            android:layout_marginVertical="20dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_latitude"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/MiEstilo.textoEditable"
            android:hint="@string/hint_latitude"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_latitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MiEstilo.textoEditableEscrito"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_longitude"
            style="@style/MiEstilo.textos"
            android:layout_marginVertical="20dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_longitude"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/MiEstilo.textoEditable"
            android:hint="@string/hint_longitude"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_longitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/MiEstilo.textoEditableEscrito"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp"
            android:gravity="center">
            <Button
                android:id="@+id/btnGuarda"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                style="@style/MiEstilo.botones"
                android:text="@string/guardar"
                android:layout_marginHorizontal="32dp"/>
            <Button
                android:id="@+id/btnCancela"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                style="@style/MiEstilo.botones"
                android:text="@string/cancelar"
                android:layout_marginHorizontal="32dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnBorra"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            style="@style/MiEstilo.botones"
            android:text="@string/delete"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    </LinearLayout>
</FrameLayout>