<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    style="@style/MiEstilo.fondo"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MiEstilo.textos.titulos"
        android:text="@string/bienvenido_a_a_mi_banco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="420dp"
        android:layout_height="500dp"
        android:layout_marginTop="90dp"
        style="@style/MiEstilo.imagenFondo"
        android:contentDescription="@string/imagen_fondo_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@style/MiEstilo.botones"
        android:text="@string/txt_button_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome"/>

</androidx.constraintlayout.widget.ConstraintLayout>