<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_Vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_H_Inferior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/txtV_Titulo"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="#3C3C3C"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_usuario"
        app:endIconMode="clear_text"
        app:helperText="@string/obligatorio"
        app:layout_constraintBottom_toBottomOf="@id/gl_H"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtV_Titulo"
        app:layout_constraintVertical_bias="0.638" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_usr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_psw"
        app:endIconMode="password_toggle"
        app:helperText="@string/obligatorio"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintBottom_toBottomOf="@id/gl_H_Inferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_H"
        app:layout_constraintVertical_bias="0.253">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_Enter"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/gl_Vertical"
        app:layout_constraintBottom_toBottomOf="@id/gl_H_Inferior"
        android:layout_marginEnd="32dp"
        android:text="@string/txt_button_enter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_Exit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/gl_Vertical"
        app:layout_constraintBottom_toBottomOf="@id/gl_H_Inferior"
        android:layout_marginStart="32dp"
        android:text="@string/txt_button_exit"/>

</androidx.constraintlayout.widget.ConstraintLayout>